Removed 'ro-' prefix from validators.

--- a/messages-validator.html
+++ b/messages-validator.html
@@ -25,8 +25,8 @@ Translated default validation messages.
 			"max": "Valoarea introdusă este prea mare!",
 			
 			// custom validators
-			"ro-cif": "Valoarea introdusă nu este un CIF invalid!",
-			"ro-cnp": "Valoarea introdusă nu este un CNP invalid!"
+			"cif": "Valoarea introdusă nu este un CIF invalid!",
+			"cnp": "Valoarea introdusă nu este un CNP invalid!"
 		});
 		
 	})( (window.CbnForm && window.CbnForm.Validator ? window.CbnForm.Validator : null ) );
