changed the default message for required

--- a/messages-validator.html
+++ b/messages-validator.html
@@ -13,7 +13,7 @@ Translated default validation messages.
 			"_default": "Valoarea introdusă este invalidă!",
 			
 			// text/basic validators: 
-			"required": "Câmp necompletat!",
+			"required": "Obligatoriu!",
 			"pattern": "Valoarea introdusă este invalidă!",
 			"email": "Adresă email invalidă!",
 			"minlength": "Valoarea introdusă este prea scurtă!",
