--- a/validators/identification.html
+++ b/validators/identification.html
@@ -6,7 +6,7 @@ Contains validators for several Romanian identification codes:
 
 -->
 
-<link rel="import" href="../../cbn-form/cbn-form-validator.html">
+<link rel="import" href="../../cbn-form/lib/include.html" />
 
 <script>
 	
